# veriCortex

./: CNAME  README.md  USAGE_EXAMPLES.md
.github/workflows/: jekyll-gh-pages.yml
cortex/clients/proofcortex-dashboard/: README.md
cortex/verifier-offchain/: .env.example
cortex/verifier-offchain/src/: main.rs
docs/: dash.html  index.html  index3.html  index_bak.html  intro.html  mobile.html  wave2_updates.txt
docs/templates/: models.html  proofDetails.html  registerModel.html  submitProof.html
examples/: README.md  Stablecoin_Usecase.md
prover/: README.md
sdk/ai/python/: setup.py
sdk/core/rust/: README.md
sdk/core/typescript/: package.json
sdk/core/typescript/src/: index.ts
src/api/: README.md
src/api/proofcortex-api/: content.txt  create.sh
src/clients/proofcortex-dashboard/: Cargo.toml  content.txt  index.html  utils.rs
src/clients/proofcortex-dashboard/src/: api.rs  app.rs  main.rs
src/clients/proofcortex-dashboard/src/components/: proof_list.rs  wallet.rs
src/clients/proofcortex-dashboard/src/utils/: wallet.rs
src/clients/proofcortex-dashboard/static/js/: wallet_Bridge.js
src/sdk/: README.md
src/sdk/ai/python/: README.md
src/sdk/ai/python/vericortex/: __init__.py
src/sdk/blockchain/solidity/: README.md
src/sdk/core/rust/: Cargo.toml
src/sdk/core/typescript/: README.md
src/sdk/mobile/android/: README.md
src/sdk/unity/: README.md
src/verifier/: BlockDAG_Verifier.sol  README.md
src/verifier-offchain/: .env.example  Cargo.toml  README.md
src/verifier-offchain/tests/: sample_proof.json
tools/: proof_verify_cli.py
(+1 files in other folders)
