[package]
name = "verifier_offchain"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
ethers = { version = "2.0.0", features = ["abigen","providers","signers","contract"] }
tokio = { version = "1", features = ["rt-multi-thread","macros"] }
dotenv = "0.15"
hex = "0.4"
log = "0.4"
env_logger = "0.10"
